--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header id="header">
      <h1>Welcome to my Beginer webpage</h1>
     </header>
-    <main>
+    <main id="para">
         <p>This is a simple web page created for beginers</p>
     </main>
+    <div id="button">
+        <button>Change Color</button>
+    </div>
 </body>
 </html>
