--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header id="header">
@@ -13,7 +14,8 @@
         <p>This is a simple web page created for beginers</p>
     </main>
     <div id="button">
-        <button>Change Color</button>
+        <button >Change Color</button>
     </div>
+    <script src="./script.js"></script>
 </body>
 </html>
